--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
+    "nodemailer": "^6.10.0",
     "uuid": "^11.0.5",
     "zod": "^3.25.0-canary.20241210T225910"
   },
@@ -28,6 +29,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.0",
+    "@types/nodemailer": "^6.4.17",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
     "mongoose": "^8.9.5",
