--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["deliveroo", "Dilum", "uuidv"]
+  "cSpell.words": ["deliveroo", "Dilum", "uuidv"],
+  "postman.settings.dotenv-detection-notification-visibility": false
 }
