--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "nodemailer": "^6.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.5",
     "zod": "^3.25.0-canary.20241210T225910"
   },
@@ -31,6 +33,8 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.0",
     "@types/nodemailer": "^6.4.17",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
     "mongoose": "^8.9.5",
