feat: Add schemas for authentication, cart, category, common, dish, restaurant, and user management
-dockerize the backend for the first time.

- Implemented Zod schemas for validating request bodies and parameters for authentication (login, signup, password reset).
- Created cart schemas for adding and updating items in the cart.
- Defined category schemas for creating and updating categories.
- Developed common schemas for handling user and dish IDs.
- Established dish schemas for creating and updating dish details.
- Added restaurant schemas for managing restaurant information.
- Introduced user schemas for user creation and updates.

feat: Implement services for cart, category, dish, email templates, mail, restaurant, and user management

- Developed cart service for managing user carts (add, update, remove items).
- Implemented category service for CRUD operations on categories.
- Created dish service for managing dish data.
- Added email template service for sending password reset emails.
- Implemented mail service for sending emails using Mailtrap.
- Developed restaurant service for managing restaurant data.
- Created user service for handling user-related operations.

feat: Set up Swagger documentation for API

- Configured Swagger for API documentation with endpoints for health checks, authentication, restaurant management, categories, dishes, cart, and users.

chore: Add utility functions for password hashing and email validation

- Implemented password hashing and comparison functions using bcrypt.
- Added regex utility for validating email formats.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.ts",
   "type": "commonjs",
   "scripts": {
+    "build": "tsc",
     "dev": "nodemon src/server.ts",
     "format:fix": "prettier --write .",
     "lint:fix": "eslint --fix src"
@@ -43,5 +44,6 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.48.0"
-  }
+  },
+  "packageManager": "yarn@4.12.0"
 }
