--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon src/server.ts",
+    "dev": "doppler run -- nodemon src/server.ts",
     "format:fix": "prettier --write .",
     "lint:fix": "eslint --fix src"
   },
