--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format:fix": "prettier --write .",
     "lint:fix": "eslint --fix src"
   },
-  "author": "TBDilum",
+  "author": "DiluDevX",
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -22,7 +22,7 @@
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "7.0.11",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.5",
