--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.ts",
   "type": "commonjs",
   "scripts": {
+    "start": "node dist/server.js",
     "build": "tsc",
     "dev": "doppler run -- nodemon src/server.ts",
     "format:fix": "prettier --write .",
